--- a/app/scripts/views/tunnusluvut/muokkaus-me.html
+++ b/app/scripts/views/tunnusluvut/muokkaus-me.html
@@ -8,12 +8,14 @@
     </uib-progressbar>
   </juku-form-row>
   <juku-form-row>
-    <juku-tunnusluvut-liikenteen-kysynta-tarjonta tyyppi="ME" liikennevuosi="tunnusluvut.liikennevuosi"></juku-tunnusluvut-liikenteen-kysynta-tarjonta>
+    <juku-tunnusluvut-liikenteen-kysynta-tarjonta tyyppi="ME"
+                                                  liikennevuosi="tunnusluvut.liikennevuosi"></juku-tunnusluvut-liikenteen-kysynta-tarjonta>
   </juku-form-row>
   <juku-form-row>
-    <juku-tunnusluvut-liikennointikorvaukset liikennointikorvaus="tunnusluvut.liikennointikorvaus" tyyppi="ME"></juku-tunnusluvut-liikennointikorvaukset>
+    <juku-tunnusluvut-liikennointikorvaukset liikennointikorvaus="tunnusluvut.liikennointikorvaus"
+                                             tyyppi="ME"></juku-tunnusluvut-liikennointikorvaukset>
   </juku-form-row>
   <juku-form-row>
-    <juku-tunnusluvut-lisatiedot lisatiedot="taustatiedot.lisatiedot"></juku-tunnusluvut-lisatiedot>
+    <juku-tunnusluvut-lisatiedot lisatiedot="tunnusluvut.kommentti" tyyppi="ME"></juku-tunnusluvut-lisatiedot>
   </juku-form-row>
 </div>
