--- a/app/scripts/views/tunnusluvut/muokkaus-psab.html
+++ b/app/scripts/views/tunnusluvut/muokkaus-psab.html
@@ -17,7 +17,8 @@
     <juku-tunnusluvut-kalusto tyyppi="BR" kalusto="tunnusluvut.kalusto"></juku-tunnusluvut-kalusto>
   </juku-form-row>
   <juku-form-row>
-    <juku-tunnusluvut-liikennointikorvaukset liikennointikorvaus="tunnusluvut.liikennointikorvaus" tyyppi="BR"></juku-tunnusluvut-liikennointikorvaukset>
+    <juku-tunnusluvut-liikennointikorvaukset liikennointikorvaus="tunnusluvut.liikennointikorvaus"
+                                             tyyppi="BR"></juku-tunnusluvut-liikennointikorvaukset>
   </juku-form-row>
   <juku-form-row>
     <juku-tunnusluvut-lipputulot lipputulo="tunnusluvut.lipputulo" tyyppi="BR"></juku-tunnusluvut-lipputulot>
@@ -26,6 +27,6 @@
     <juku-tunnusluvut-tarjouskilpailut tyyppi="BR"></juku-tunnusluvut-tarjouskilpailut>
   </juku-form-row>
   <juku-form-row>
-    <juku-tunnusluvut-lisatiedot lisatiedot="taustatiedot.lisatiedot"></juku-tunnusluvut-lisatiedot>
+    <juku-tunnusluvut-lisatiedot lisatiedot="tunnusluvut.kommentti" tyyppi="BR"></juku-tunnusluvut-lisatiedot>
   </juku-form-row>
 </div>
