--- a/app/scripts/views/tunnusluvut/muokkaus-sl.html
+++ b/app/scripts/views/tunnusluvut/muokkaus-sl.html
@@ -8,16 +8,17 @@
     </uib-progressbar>
   </juku-form-row>
   <juku-form-row>
-    <juku-tunnusluvut-liikenteen-kysynta-tarjonta tyyppi="SL"
+    <juku-tunnusluvut-liikenteen-kysynta-tarjonta tyyppi="SA"
                                                   liikennevuosi="tunnusluvut.liikennevuosi"></juku-tunnusluvut-liikenteen-kysynta-tarjonta>
   </juku-form-row>
   <juku-form-row>
-    <juku-tunnusluvut-liikennointikorvaukset liikennointikorvaus="tunnusluvut.liikennointikorvaus" tyyppi="SL"></juku-tunnusluvut-liikennointikorvaukset>
+    <juku-tunnusluvut-liikennointikorvaukset liikennointikorvaus="tunnusluvut.liikennointikorvaus"
+                                             tyyppi="SA"></juku-tunnusluvut-liikennointikorvaukset>
   </juku-form-row>
   <juku-form-row>
-    <juku-tunnusluvut-lipputulot lipputulo="tunnusluvut.lipputulo" tyyppi="SL"></juku-tunnusluvut-lipputulot>
+    <juku-tunnusluvut-lipputulot lipputulo="tunnusluvut.lipputulo" tyyppi="SA"></juku-tunnusluvut-lipputulot>
   </juku-form-row>
   <juku-form-row>
-    <juku-tunnusluvut-lisatiedot lisatiedot="taustatiedot.lisatiedot"></juku-tunnusluvut-lisatiedot>
+    <juku-tunnusluvut-lisatiedot lisatiedot="tunnusluvut.kommentti" tyyppi="SA"></juku-tunnusluvut-lisatiedot>
   </juku-form-row>
 </div>
